add:更改为左侧布局

--- a/source/_data/custom.styl
+++ b/source/_data/custom.styl
@@ -23,3 +23,35 @@
 b,
 strong {font-weight: 600;}
 .post-copyright {border: 0;}
+
+	
+// @media (min-width: 1200px) { 
+// 	// 宽度设置
+// 	.header-inner,
+// 	.main-inner,
+// 	.footer-inner                 {width:1170px;max-width:1170px;padding:0;}
+	
+// 	.post-body,
+// 	.post-copyright,
+// 	.posts-collapse               {font-size: 15px;}
+
+// 	// 导航条
+// 	.header                       {margin-top:10px;border-bottom:1px solid #e3e3e3;background-color:transparent;}
+// 	.header-inner                 {width:1170px;max-width:1170px;padding:0;}
+// 	.menu                         {text-align:right;}
+// 	.menu .menu-item a            {border-bottom:1px solid transparent;padding:20px 15px;color:#666;}
+// 	.menu .menu-item a:hover,
+// 	.menu-item a.menu-item-active {background-color:transparent;color:#181818;}
+// 	.menu-item a.menu-item-active {border-color:#181818;}
+	
+// 	// 内容
+// 	.main-inner                   {margin-bottom:20px;}
+// 	.post-body                    {font:14px/1.75 Arial, "微软雅黑";color:#666;}
+		
+// 	// 详情页
+// 	.posts-expand .post-title     {font:22px "宋体";}
+// 	.posts-expand .post-meta      {font-size:12px;}
+	
+// 	// footer
+// 	.footer                       {color:#666;}
+// }
